<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Weather Station</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_city">CityActivity</string>
    <string name="title_activity_detail_day">Day forecast</string>
    <string name="title_activity_preference">Settings</string>
    <string name="download">loading...</string>
    <string name="humidity">Humidity: </string>
    <string name="pressure">Pressure: </string>
    <string name="wind">Wind: </string>
    <string name="wpi">Wpi: </string>
    <string name="temperatureFlik">Real fill: </string>
    <string name="pressureUnit">mb</string>
    <string name="windUnit">m/s</string>
    <string name="north">north</string>
    <string name="northeast">northeast</string>
    <string name="east">east</string>
    <string name="southeast">southeast</string>
    <string name="sout">south</string>
    <string name="southwest">southwest</string>
    <string name="west">west</string>
    <string name="northwest">nortwest</string>
    <string name="sunny">sunny</string>
    <string name="partly_cloudy">partly cloudy</string>
    <string name="cloudy">cloudy</string>
    <string name="havy_cloudy">cloudy</string>
    <string name="short_rain">short rain</string>
    <string name="rain">rain</string>
    <string name="storm_rain">storm rain</string>
    <string name="hail">hail</string>
    <string name="rainy_snow">rainy-snow</string>
    <string name="snow">snow</string>
    <string name="snowstorm">snowstorm</string>
    <string name="widget_name">forecast</string>
    <string name="last_update">last update</string>
    <string name="units_temperature">Units of temperature</string>
    <string name="summary_units_temperature">Celsius/Fahrenheit</string>
    <string name="units_wind">Units of wind speed</string>
    <string name="summary_units_wind">Set units of wind speed </string>
    <string name="set_location_onoff">set Location</string>
    <string name="summary_set_location">Set location manual</string>
    <string name="set_location">Location</string>
    <string name="setted_location">Location</string>
    <string name="toggle_units">Units</string>
    <string name="summary_toggle_units">Toggle units</string>
    <string name="cat_location">Location</string>
    <string name="summary_cat_location">Select Location</string>
    <string name="providers">Providers</string>
    <string name="summary_providers">Selection of provider</string>
    <string name="search_hint">Set location</string>
	<string name="search_label">Search Location</string>
	<string name="accept">Accept</string>
    <string name="no_network">There are problems retrieving the new forecast. Check your network status</string>
    <string name="info">Info</string>
    
    <!-- Charts -->
    <string name="temperature_chart">Temperature chart</string>
    <string name="pressure_chart">Pressure chart</string>
    <string name="humidity_chart">Humidity chart</string>
    <!-- Charts -->
	
    <string-array name="language">
        <item>English</item>
        <item>Ukraine</item>
    </string-array>
    <string-array name="language_value">
        <item>"en"</item>
        <item>"uk"</item>
    </string-array>
     <string-array name="wind_units_speed">
        <item>miles/h</item>
        <item>km/h</item>
        <item>m/s</item>
        <item>ft/s</item>
    </string-array>
    <string-array name="wind_units_speed_value">
        <item>"miles/h"</item>
        <item>"km/h"</item>
        <item>"m/s"</item>
        <item>"ft/s"</item>
    </string-array>
    <string-array name="location_provider">
        <item>GPS</item>
        <item>Network</item>
        <item>Best provider</item>
    </string-array>
    <string-array name="location_provider_value">
        <item>"GPS"</item>
        <item>"Network"</item>
        <item>"Best provider"</item>
    </string-array>
        <string-array name="refresh_time">
        <item>15 minut</item>
        <item>30 minut</item>
        <item>1 hour</item>
    </string-array>
    <string-array name="refresh_time_value">
        <item>"15"</item>
        <item>"30"</item>
        <item>"60"</item>
    </string-array>

    <string name="title_activity_location">Location</string>
    
    <string name="power_category">Power Saver</string>
    <string name="power_refresh_category">Refresh period settings</string>
    
    <string name="refresh_time_title">Refresh</string>
    <string name="summary_refresh_time">Select refresh time</string>
    
    <string name="notification_enable">Refresh widget enable</string>
    
    <string name="language_title">Language</string>
    <string name="summary_language">Select language</string>
    
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="humidity_fragment">Humidity fragment</string>
    <string name="title_activity_charts">Parameters chart </string>

</resources>
