<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <PreferenceCategory
        android:key="units"
        android:summary="@string/summary_toggle_units"
        android:title="@string/toggle_units" >
        
        <CheckBoxPreference
            android:key="units_temp"
            android:summary="@string/summary_units_temperature"
            android:title="@string/units_temperature" >
        </CheckBoxPreference>
        
        <ListPreference 
            android:entries="@array/wind_units_speed"
 			android:entryValues="@array/wind_units_speed_value"
            android:key="units_wind" 
            android:summary="@string/summary_units_wind"
            android:title="@string/units_wind"/>
        
    </PreferenceCategory>
    
    <PreferenceCategory
        android:key="location"
        android:summary="@string/summary_cat_location"
        android:title="@string/cat_location" >
        
        <ListPreference
            android:entries="@array/location_provider"
            android:entryValues="@array/location_provider_value"
            android:key="providers"
            android:summary="@string/summary_providers"
            android:title="@string/providers" />
    
   	<CheckBoxPreference
        android:key="manual_location"
        android:summary="@string/summary_set_location"
        android:title="@string/set_location_onoff" >
    </CheckBoxPreference>

    <EditTextPreference
        android:dependency="manual_location"
        android:key="address"
        android:summary="Address for notifications"
        android:title="@string/set_location" >
    </EditTextPreference>
     </PreferenceCategory>
     
    <PreferenceScreen android:key="KEY" android:title="DOYOURWORK">
    <intent android:targetClass="com.unrealedz.wstation.LocationActivity"
        android:targetPackage="com.unrealedz.wstation">
        <extra android:name="EXTRA_KEY" android:value="yourValue" />
    </intent>
</PreferenceScreen>

</PreferenceScreen>