<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    
   <LinearLayout
       android:id="@+id/linearlayoutLocationHour"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:paddingLeft="20dp"
       android:paddingTop="10dp" >

       <TextView
           android:id="@+id/tvCityDay"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text=""
           android:textSize="@dimen/text_size_small" />

       <TextView
           android:id="@+id/tvRegionDay"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="5dp"
           android:text=""
           android:textSize="@dimen/text_size_small" />
       
   </LinearLayout>
   
          <TextView
           android:id="@+id/tvSelectedHour"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text=""
           android:layout_alignParentRight="true"
           android:layout_alignParentTop="true"
           android:paddingRight="20dp"
       		android:paddingTop="10dp"
           android:textSize="@dimen/text_size_small" />

   <ImageView
       android:id="@+id/imageDay"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/linearlayoutLocationHour"
       android:layout_centerHorizontal="true"
       android:src="@drawable/_4_short_rain_bigest" />

   <TextView
       android:id="@+id/tvCloudHour"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/imageDay"
       android:layout_centerHorizontal="true"
       android:shadowColor="@color/white"
       android:shadowDx="-2"
       android:shadowDy="2"
       android:shadowRadius="0.01"
       android:text=""
       android:textSize="@dimen/text_size_big"
       android:textStyle="bold" />

   <LinearLayout
       android:id="@+id/linearlayoutDayInfoHour"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:paddingTop="3dp"
       android:layout_below="@+id/tvCloudHour"
       android:orientation="horizontal" >
       
     	<LinearLayout
           android:id="@+id/linearlayoutInfoHour"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:paddingLeft="20dp"
           android:orientation="vertical" >
           
     	     <LinearLayout 
             	android:id="@+id/linearlayoutHourHumidity"
             	android:layout_width="wrap_content"
             	android:layout_height="wrap_content"
             	android:layout_marginTop="5dp"
             	android:orientation="horizontal"
                >
                
                <TextView
                android:id="@+id/tvHumidityHourTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/darkgray"
                android:text="@string/humidity" />  
                
           		<TextView
               android:id="@+id/tvHumidityHour"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="" />
                
            </LinearLayout>
            
     	    <LinearLayout 
             	android:id="@+id/linearlayoutHourPressure"
             	android:layout_width="wrap_content"
             	android:layout_height="wrap_content"
             	android:orientation="horizontal"
                >
                
                <TextView
                android:id="@+id/tvPressureHourTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/darkgray"
                android:text="@string/pressure" />  
                
           <TextView
               android:id="@+id/tvPressureHour"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="" />
                
            </LinearLayout>

     	    <LinearLayout 
             	android:id="@+id/linearlayoutHourWind"
             	android:layout_width="wrap_content"
             	android:layout_height="wrap_content"
             	android:orientation="horizontal"
                >
                
                <TextView
                android:id="@+id/tvWindHourTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/darkgray"
                android:text="@string/wind" />  
                
           <TextView
               android:id="@+id/tvWindHour"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="" />
                
            </LinearLayout>




       </LinearLayout>
       
       <LinearLayout
           android:id="@+id/tempDayLayout"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center_horizontal"
           android:layout_weight="2"
           android:orientation="vertical">

           <TextView
               android:id="@+id/tvDayTmax"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text=""
               android:textSize="@dimen/text_size_biggest"
               android:textStyle="bold" />

           <LinearLayout
               android:id="@+id/rect"
               android:layout_width="40dp"
               android:layout_height="1dp"
               android:background="@drawable/rect"
               android:orientation="vertical" >
           </LinearLayout>

           <TextView
               android:id="@+id/tvDayTmin"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text=""
               android:textColor="@color/darkgray"
               android:textSize="@dimen/text_size_big"/>
       </LinearLayout>


   </LinearLayout>

</RelativeLayout>