<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:orientation="vertical">
    
    <RelativeLayout 
     android:id="@+id/linearlayoutCurrentInfo"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
        
        <ImageView
            android:id="@+id/imageCurrent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
			android:layout_alignParentTop="true"
            android:src="@drawable/_0_sun_big" />
        
         <LinearLayout
             android:id="@+id/linearlayoutLocation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:paddingLeft="20dp"
             android:paddingTop="5dp" >

             <TextView
                 android:id="@+id/tvCity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:shadowColor="@color/white"
               	 android:shadowDx="-1"
                 android:shadowDy="1"
                 android:shadowRadius="0.01"
                 android:textStyle="bold"
                 android:text=""
                 android:textSize="@dimen/text_size_small" />

             <TextView
                 android:id="@+id/tvRegion"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:shadowColor="@color/white"
               	 android:shadowDx="-1"
                 android:shadowDy="1"
                 android:shadowRadius="0.01"
                 android:textStyle="bold"
                 android:text=""
                 android:textSize="@dimen/text_size_small" />
         </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayoutInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
			android:layout_below="@+id/linearlayoutLocation"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="5dp" >

            <TextView
                android:id="@+id/tvTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="@color/black"
                android:shadowDx="-2"
                android:shadowDy="2"
                android:shadowRadius="0.01"
                android:text=""
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_biggest"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/rect_gray1"
                android:layout_width="60dp"
                android:layout_height="1dp"
                android:background="@drawable/rect_gray"
                android:orientation="vertical" >
            </LinearLayout>

            <TextView
                android:id="@+id/tvTemperatureFlik"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/tvCloud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:shadowColor="@color/white"
      			android:shadowDx="1"
       			android:shadowDy="1"
       			android:shadowRadius="0.01"
                android:text=""
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold" />
            
            <LinearLayout 
             	android:id="@+id/linearlayoutHumidity"
             	android:layout_width="match_parent"
             	android:layout_height="match_parent"
             	android:orientation="horizontal"
             	android:layout_marginTop="10dp"
                >
                
                <TextView
                android:id="@+id/tvHumidityTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/darkgray"
                android:text="@string/humidity" />  
                
                <TextView
                android:id="@+id/tvHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" /> 
                
            </LinearLayout>
            
            <LinearLayout 
             	android:id="@+id/linearlayoutPressure"
             	android:layout_width="match_parent"
             	android:layout_height="match_parent"
             	android:orientation="horizontal"
                >
                
                <TextView
                android:id="@+id/tvPressureTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/darkgray"
                android:text="@string/pressure" />  
                
            <TextView
                android:id="@+id/tvPressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
                
            </LinearLayout>
            
            <LinearLayout 
             	android:id="@+id/linearlayoutWind"
             	android:layout_width="match_parent"
             	android:layout_height="match_parent"
             	android:orientation="horizontal"
                >
                
                <TextView
                android:id="@+id/tvWindTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/darkgray"
                android:text="@string/wind" />  
                
            <TextView
                android:id="@+id/tvWind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
                
            </LinearLayout>





        </LinearLayout>
        
                


    </RelativeLayout>

    
</LinearLayout>
